--- a/src/app/pages/customers-page/customer-view/customer-events/single-event/single-event.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-events/single-event/single-event.component.html
@@ -1,4 +1,4 @@
-<span>
+<span class="single-event">
   <ng-container *ngFor="let word of data.template.split(' ')">
 
     <ng-container *ngIf="data.values[word]; else other">
