--- a/src/app/pages/notifications-page/notifications.component.html
+++ b/src/app/pages/notifications-page/notifications.component.html
@@ -24,7 +24,7 @@
       <div *ngIf="notificationsByDate.nots.length > 0">
         <div class="notifications-list__content__title">Today</div>
 
-        <div *ngFor="let notification of notificationsByDate.nots">
+        <div *ngFor="let notification of notificationsByDate.entities">
           <div class="notifications__content__notification" (click)="readNotification(notification)">
             <div class="notifications__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
             <div class="notifications__content__notification__message">{{notification.body}}</div>
