--- a/src/assets/scss/_customer-view.scss
+++ b/src/assets/scss/_customer-view.scss
@@ -698,6 +698,22 @@ customer-events {
       font-size: 12px;
       border-bottom: 1px solid rgba(0,0,0,0.15);
 
+      &__info {
+        flex-basis: 100%;
+        margin-left: 12px;
+
+        div:first-of-type {
+          margin-bottom: 4px;
+          margin-right: 10px;
+          text-align: right;
+          font-size: 10px;
+        }
+      }
+
+      &__image {
+        margin-top: 15px;
+      }
+
       span {
         margin-left: 10px;
       }
