--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -45,10 +45,7 @@
         </div>
       </div>
       <div class="entity-view__info__edit">
-        <md-icon *ngIf="!customerInfoEditMode; else editActions" [md-menu-trigger-for]="mainMenu">more_vert</md-icon>
-        <md-menu #mainMenu="mdMenu" x-position="after">
-          <button md-menu-item (click)="customerInfoEditMode = true"> Edit Customer </button>
-        </md-menu>
+        <div *ngIf="!customerInfoEditMode; else editActions" class="entity-view__info__edit__update" (click)="customerInfoEditMode = true"> EDIT CUSTOMER </div>
 
         <ng-template #editActions>
           <div (click)="cancelInfoUpdate()">CANCEL</div>
