Fix 'no customer events' message

--- a/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
@@ -32,7 +32,7 @@
       </div>
 
       <md-spinner class="customer-view__spinner" *ngIf="loadingData"></md-spinner>
-      <div class="customer-view__no-results" *ngIf="!loadingData && (!activities || activities.length === 0)">No customer events found</div>
+      <div class="customer-view__no-results" *ngIf="!loadingData && isEmpty">No customer events found</div>
     </div>
   </md-card-content>
 </md-card>
