--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -3,16 +3,16 @@
     <app-topnav [class.header--hover]="!showSidenav && showOnHover" [class.header--with-sidenav]="showSidenav" [sideNav]="sidenav"></app-topnav>
   </header>
   <md-sidenav (mouseenter)="hover(true)" (mouseleave)="hover(false)" #sidenav
-              [mode]="(_navigation.mediumScreenAndDown || showOnHover) ? 'over' : 'side'"
-              [opened]="showSidenav || !_navigation.mediumScreenAndDown">
-    <app-sidenav [isHovering]="isHovering || showSidenav || _navigation.mediumScreenAndDown"></app-sidenav>
+              [mode]="(navigation.mediumScreenAndDown || showOnHover) ? 'over' : 'side'"
+              [opened]="showSidenav || !navigation.mediumScreenAndDown">
+    <app-sidenav [isHovering]="isHovering || showSidenav || navigation.mediumScreenAndDown"></app-sidenav>
   </md-sidenav>
   <md-progress-bar class="progress-bar" *ngIf="progressBarService.showTopProgressBar$ | async" mode="query"></md-progress-bar>
 
-  <main [class.container--hover]="!(_navigation.showSidenav | async) && showOnHover">
+  <main [class.container--hover]="!(navigation.showSidenav | async) && showOnHover">
     <div class="container">
       <router-outlet></router-outlet>
-      <notifications-quick *ngIf="_navigation.showNotifications | async" (close)="_navigation.toggleNotifications(false)"></notifications-quick>
+      <notifications-quick *ngIf="navigation.showNotifications | async" (close)="navigation.toggleNotifications(false)"></notifications-quick>
       <div class="clearfix"></div>
     </div>
   </main>
