--- a/src/app/shared/components/simple-dropdown/simple-dropdown.component.html
+++ b/src/app/shared/components/simple-dropdown/simple-dropdown.component.html
@@ -4,11 +4,11 @@
     <div class="simple-dropdown__header" [class.simple-dropdown__header--active]="dropdownVisible" (click)="toggleDropdown()">
       <md-icon *ngIf="icon" class="simple-dropdown__header__icon">{{icon}}</md-icon>
       <span class="simple-dropdown__header__value">{{mapper(selectedOption)}}</span>
-      <md-icon class="simple-dropdown__header__arrow" [class.arrow--rotate]="dropdownVisible">keyboard_arrow_down</md-icon>
+      <md-icon class="simple-dropdown__header__arrow" [class.simple-dropdown__header__arrow--disabled]="getOptions().length === 0" [class.arrow--rotate]="dropdownVisible">keyboard_arrow_down</md-icon>
     </div>
 
     <div [style.height]="getHeight()" class="simple-dropdown__menu">
-      <div class="simple-dropdown__menu__item" *ngFor="let option of options" (click)="select(option)"> {{mapper(option)}} </div>
+      <div class="simple-dropdown__menu__item" *ngFor="let option of getOptions()" (click)="select(option)"> {{mapper(option)}} </div>
     </div>
   </div>
 
