--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -10,6 +10,10 @@ $main-color: #9B9A9B;
 .topnav {
   font-size: 14px;
 
+  &__route-loader {
+    position: absolute;
+  }
+
   &__items {
     &--expanded {
       display: flex;
