--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -1,26 +1,32 @@
-$title-color: #979797;
+$title-color: #8D8888;
 
 .entity-index {
   position: relative;
 
   &__title {
     position: relative;
-    padding: 25px 70px;
-    font-size: 22px;
+    padding: 20px 55px;
+    font-size: 20px;
+    font-weight: 500;
     color: $title-color;
 
     md-input {
       position: absolute;
-      top: 14px;
-      right: 70px;
-      width: 160px;
+      top: 10px;
+      right: 55px;
+      width: 220px;
       font-size: 14px;
+      font-weight: 400;
+
+      .md-focused {
+        color: #FF8D20;
+      }
     }
   }
 
   &__add {
     position: absolute !important;
-    top: 134px;
+    top: 44px;
     left: 10px;
     background: #498FE1;
     font-size: 18px !important;
@@ -65,47 +71,49 @@ $title-color: #979797;
 
   &__table {
     color: #666666;
+    font-size: 12px;
 
     &__header {
       box-shadow: 0 2px 5px #d0d0d0;
 
       tr th {
         position: relative;
-        padding: 30px 5px;
+        padding: 20px 5px;
+        font-weight: 400;
         cursor: pointer;
 
         &:first-child {
-          padding-left: 45px;
+          padding-left: 55px;
         }
 
         &:last-child {
-          padding-right: 0;
+          width: 40px;
         }
 
         md-icon {
           position: absolute;
           bottom: 15px;
-          width: 20px;
-          height: 35px;
         }
       }
     }
 
     tbody {
+      color: black;
+
       tr {
         border-bottom: solid 1px #d0d0d0;
       }
 
       tr td {
-        padding: 10px 5px;
+        padding: 5px;
         cursor: pointer;
 
         &:first-child {
-          padding-left: 45px;
+          padding-left: 55px;
         }
 
         &:last-child {
-          padding-right: 0;
+          padding-right: 10px;
         }
       }
     }
