Add trackers index page

--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -105,7 +105,7 @@ $title-color: #8D8888;
       }
 
       tr td {
-        padding: 5px;
+        padding: 5px 20px 5px 5px;
         cursor: pointer;
 
         &:first-child {
