--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -1,30 +1,38 @@
 <div class="entity-view">
-  <div class="entity-view__title">Affiliate Details</div>
+  <div class="entity-view__title">Affiliate</div>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
-  <div *ngIf="entity" class="entity-view__content">
+  <div *ngIf="entity">
 
-    <div class="entity-view__content__title entity-view__content__title--first"> General Details </div>
-
-    <div class="entity-view__content__fields">
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">ID:</span>
-        <span>{{entity.id}}</span>
+    <div class="entity-view__info">
+      <div class="entity-view__info__image">
+        <img src="https://www.kwrwater.nl/wp-content/themes/kwr/assets/placeholders/no-profile-user.png" alt="">
       </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Affiliate ID:</span>
-        <span>{{entity.affiliateId}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Created At:</span>
-        <span>{{entity.createdAt.format()}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Updated At:</span>
-        <span>{{entity.updatedAt.format()}}</span>
+      <div class="entity-view__info__data">
+        <div class="entity-view__info__data__date">Created: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
+        <div class="entity-view__info__data__name">{{entity.name}}</div>
+        <div class="entity-view__info__data__other">UUID: {{entity.id}}</div>
       </div>
     </div>
+
+    <div class="entity-view__navigation">
+      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="setIndex(0)">GENERAL DETAILS</span>
+      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="setIndex(1)">TRACKING</span>
+    </div>
+
+    <md-tab-group [(selectedIndex)]="selectedIndex">
+      <md-tab>
+        <coming-soon class="entity-view__coming-soon" [inPage]="true"></coming-soon>
+      </md-tab>
+
+      <md-tab>
+        <coming-soon class="entity-view__coming-soon" [inPage]="true"></coming-soon>
+      </md-tab>
+
+    </md-tab-group>
+
   </div>
 </div>
+
 
