--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -27,7 +27,9 @@
       </md-tab>
 
       <md-tab>
-        <coming-soon class="entity-view__coming-soon" [inPage]="true"></coming-soon>
+        <div class="tab-container">
+          <affiliate-trackers></affiliate-trackers>
+        </div>
       </md-tab>
 
     </md-tab-group>
