--- a/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
@@ -31,8 +31,8 @@
         </div>
       </div>
 
-      <md-spinner class="customer-view__spinner" *ngIf="loadingData"></md-spinner>
-      <div class="customer-view__no-results" *ngIf="!loadingData && isEmpty">No customer events found</div>
+      <md-spinner class="entity-view__spinner" *ngIf="loadingData"></md-spinner>
+      <div class="entity-view__no-results" *ngIf="!loadingData && isEmpty">No customer events found</div>
     </div>
   </md-card-content>
 </md-card>
