--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -150,7 +150,7 @@
                   </md-menu>
                 </div>
 
-                <div class="customer-view__no-results customer-view__no-results--credit-cards" *ngIf="!entity.creditCards || entity.creditCards.length === 0">No credit cards found</div>
+                <div class="entity-view__no-results entity-view__no-results--credit-cards" *ngIf="!entity.creditCards || entity.creditCards.length === 0">No credit cards found</div>
               </md-card-content>
             </md-card>
 
