--- a/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
@@ -1,11 +1,11 @@
-<div class="customer-view__table" [class.customer-view__table--homepage]="homepageMode">
-  <div class="customer-view__table__header" [class.customer-view__table__header--homepage]="homepageMode">
-    <div class="customer-view__table__header__title">
+<div class="entity-view__table-component" [class.entity-view__table-component--homepage]="homepageMode">
+  <div class="entity-view__table-component__header" [class.entity-view__table-component__header--homepage]="homepageMode">
+    <div class="entity-view__table-component__header__title">
       <md-icon *ngIf="homepageMode">trending_up</md-icon>
       <span>UPCOMING TRANSACTIONS</span>
     </div>
 
-    <md-input *ngIf="!homepageMode" class="customer-view__table__header__filter" placeholder="Filter" [(ngModel)]="filterValue"></md-input>
+    <md-input *ngIf="!homepageMode" class="entity-view__table-component__header__filter" placeholder="Filter" [(ngModel)]="filterValue"></md-input>
     <table-pagination
       *ngIf="!homepageMode"
       [limit]="limit"
@@ -17,7 +17,7 @@
       (updateLimit)="updateLimit($event)">
     </table-pagination>
 
-    <md-icon class="customer-view__table__header__action" [class.alone]="homepageMode">more_vert</md-icon>
+    <md-icon class="entity-view__table-component__header__action" [class.alone]="homepageMode">more_vert</md-icon>
   </div>
   <table class="highlight" [class.table__homepage]="homepageMode" [class.table__custom]="!homepageMode">
     <thead>
@@ -44,8 +44,8 @@
     </tbody>
   </table>
 
-  <md-spinner class="customer-view__spinner" *ngIf="loadingData && (!entities || entities.length === 0)"></md-spinner>
-  <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="customer-view__no-results customer-view__no-results--table">No upcoming transactions found</div>
+  <md-spinner class="entity-view__spinner" *ngIf="loadingData && (!entities || entities.length === 0)"></md-spinner>
+  <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="entity-view__no-results entity-view__no-results--table">No upcoming transactions found</div>
 
   <table-pagination
     *ngIf="!homepageMode"
