Remove unnecessary dependencies

--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -24,7 +24,7 @@
 
     <div class="dashboard__boxes">
       <movers-card [date]="date"></movers-card>
-      <dashboard-reports [params]="encodeParams()"></dashboard-reports>
+      <dashboard-reports></dashboard-reports>
     </div>
 
     <top-campaigns [date]="date" ></top-campaigns>
