--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -133,3 +133,11 @@ $title-color: #8D8888;
     }
   }
 }
+
+.codeblock {
+  padding: 5px;
+  border: 1px solid #bebab0;
+  background: #faf8f0;
+  line-height: 180%;
+  font-family: monospace;
+}
