--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -41,6 +41,7 @@
     <div class="entity-view__navigation">
       <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="setIndex(0)">TRACKING</span>
       <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 1" (click)="setIndex(1)">SESSIONS</span>
+      <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 2" (click)="setIndex(2)">CAMPAIGNS</span>
     </div>
 
     <md-tab-group [(selectedIndex)]="selectedIndex">
@@ -54,6 +55,12 @@
       <md-tab>
         <div class="tab-container">
           <affiliate-sessions [affiliateId]="entity.id"></affiliate-sessions>
+        </div>
+      </md-tab>
+
+      <md-tab>
+        <div class="tab-container">
+          <affiliate-campaigns [affiliateId]="entity.id"></affiliate-campaigns>
         </div>
       </md-tab>
 
