--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -6,7 +6,7 @@
   <div *ngIf="entity">
     <div class="entity-view__info">
       <div class="entity-view__info__image">
-        <img src="https://www.kwrwater.nl/wp-content/themes/kwr/assets/placeholders/no-profile-user.png" alt="">
+        <img src="/assets/images/result-item-customer-white.svg" alt="">
       </div>
       <div class="entity-view__info__data">
         <div class="entity-view__info__data__date">{{displayCreatedAt() ? 'Created:' : 'Updated:'}} {{(displayCreatedAt() ? entity.createdAt : entity.updatedAt) | formatDateTime: 'date-time'}}</div>
