--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -7,7 +7,7 @@
 
     <div class="entity-view__info">
       <div class="entity-view__info__image">
-        <img src="https://www.kwrwater.nl/wp-content/themes/kwr/assets/placeholders/no-profile-user.png" alt="">
+        <img src="/assets/images/result-item-transaction-white.svg" alt="">
       </div>
       <div class="entity-view__info__data">
         <div class="entity-view__info__data__date">Created: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
