--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -46,10 +46,17 @@ $blue-color: #4A90E2;
     &__image {
       display: inline-block;
       margin: 0 20px 0 60px;
+      border-radius: 50%;
+      padding: 20px;
+      background: #E7EFF7;
+
+      .Shape {
+        fill: #fff;
+      }
 
       img {
-        height: 100px;
-        border-radius: 50%;
+        height: 60px;
+        width: 60px;
         vertical-align: middle;
       }
     }
