Add feture in development on campaign affiliate tab

--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -60,7 +60,7 @@
 
       <md-tab>
         <div class="tab-container">
-          <affiliate-campaigns [affiliateId]="entity.id"></affiliate-campaigns>
+          <coming-soon [inPage]="true"></coming-soon>
         </div>
       </md-tab>
 
